--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>PAGE TITLE</title>
+    <title>Cross-Country Running</title>
 
     <link href="css/normalize.css" rel="stylesheet" type="text/css">
 
@@ -10,7 +10,7 @@
 
 <header role="banner" class="top">
 
-    <h1>Page Title</h1>
+    <h1>Cross-Country Running</h1>
 
 </header>
 
@@ -28,9 +28,8 @@
 
                 <h3>Introduction</h3>
 
-                <p>This document has examples of many different types of HTML5 elements. Each tag is interpreted
-                    differently by the browser. Some of these tags may not look visually different, but can provide
-                    assistance to accessibility software or search engines to find relevant content.</p>
+                <p>This is a fun sport of running in natural settings unlike track team running on
+                    inside or outdoor manmade tracks.  In high school, they called us gopher chasers.</p>
 
             </article>
 
